--- a/_includes/default.html
+++ b/_includes/default.html
@@ -23,7 +23,7 @@
 	<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
 
 	<!-- Le fav and touch icons -->
-	<link rel="shortcut icon" href="{{ site.BASE_PATH }}/assets/ico/favicon.ico">
+	<link rel="shortcut icon" href="{{ site.BASE_PATH }}/assets/ico/favicon.png">
 	<link rel="apple-touch-icon" href="{{ site.BASE_PATH }}/assets/ico/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="{{ site.BASE_PATH }}/assets/ico/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="{{ site.BASE_PATH }}/assets/ico/apple-touch-icon-114x114.png">
